added category management
